add tips to html and css files

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
         </header>
         <main>
             <h2>--------------A Little More About Me---------------------</h2>
+            <!-- I've changed your HTML structure a little bit so that both image container divs are in direct children of the section element - you can then set display: flex on the section element and the images will be side by side -->
             <section>
                 <div>
-
                     <img class="img1" src="./images/oleg-gospodarec-NxxPdqtHtWs-unsplash.jpg" alt="game controllers">
                 </div>
-            </section>
-            <section>
                 <div class="piccontainer">
                     <img id="img2" src="./images/ivan-rudoy-H1CzGhDhSAY-unsplash.jpg" alt="old arcade"><cite>Taken from unsplash</cite>
                 </div>
+            </section>
+            <section>
                 <p> My name is Brad Buttineau. I live in Tiny towniship. I am a twin.<br>
                     I am a achivement hunter when it comes to gaming on ps5. currently completed 22 games to 100%
                     .<br>
