--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
             <h1> Brad Buttineau </h1>
         </header>
         <main>
-            <h2>--------------A Little More About Me---------------------</h2>
+            <h2>---A Little More About Me-----</h2>
             <section>
                 <div>
 
                     <img class="img1" src="./images/oleg-gospodarec-NxxPdqtHtWs-unsplash.jpg" alt="game controllers">
                 </div>
+
+                <div class="piccontainer">
+                    <img id="img2" src="./images/ivan-rudoy-H1CzGhDhSAY-unsplash.jpg" alt="old arcade"><cite> Photos property of
+                        unsplash</cite>
+                </div>
             </section>
             <section>
-                <div class="piccontainer">
-                    <img id="img2" src="./images/ivan-rudoy-H1CzGhDhSAY-unsplash.jpg" alt="old arcade"><cite>Taken from unsplash</cite>
-                </div>
                 <p> My name is Brad Buttineau. I live in Tiny towniship. I am a twin.<br>
                     I am a achivement hunter when it comes to gaming on ps5. currently completed 22 games to 100%
                     .<br>
@@ -37,10 +39,10 @@
             <section>
                 <h3>A List of My Favourite Things</h3>
                 <ul>
-                    <li>gaming</li>
-                    <li>traveling to different places and different food joints</li>
-                    <li> spending time with family</li>
-                    <li>Love coffee</li>
+                    <li>Gaming</li>
+                    <li>Traveling to different places and different food joints</li>
+                    <li> Spending time with family</li>
+                    <li>Coffee connoisseaur </li>
                 </ul>
             </section>
 
